--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/setup-java@v2.3.1
         with:
           java-version: 16.0
+          distribution: adopt
 
       - name: java version
         run: java -version
